--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Gymkhana NITA",
-  "short_name": "BTC",
+  "short_name": "NITA",
   "icons": [
     {
       "src": "/Gymkhana_logo.png",
